--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-native-hyperlink": "0.0.4",
     "react-native-image-picker": "^0.19.4",
     "react-native-router-redux": "github:joehoyle/react-native-router-redux#vienna",
+    "react-native-safari-view": "^1.0.0",
     "react-native-vector-icons": "^1.3.2",
     "react-redux": "^4.4.0",
     "redux": "^3.3.1",
