--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-native-fetch-blob": "^0.9.4",
     "react-native-hyperlink": "0.0.4",
     "react-native-image-picker": "^0.19.4",
+    "react-native-navigation": "^1.0.30",
     "react-native-router-redux": "github:joehoyle/react-native-router-redux#vienna",
     "react-native-safari-view": "^1.0.0",
     "react-native-vector-icons": "^2.0.3",
