Add RavenJS for tracking errors

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "oauth-1.0a": "^1.0.1",
     "query-string": "^3.0.1",
+    "raven-js": "^3.7.0",
     "react": "^15.3.0",
     "react-native": "^0.33.0",
     "react-native-autogrow-textinput": "^2.1.0",
