--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^15.3.0",
     "react-native": "^0.33.0",
     "react-native-autogrow-textinput": "^2.1.0",
+    "react-native-controllers": "^2.1.4",
     "react-native-custom-action-sheet": "0.0.11",
     "react-native-fetch-blob": "^0.9.4",
     "react-native-hyperlink": "0.0.4",
