--- a/package.json
+++ b/package.json
@@ -10,36 +10,35 @@
     "preset": "jest-react-native"
   },
   "dependencies": {
-    "oauth-1.0a": "^1.0.1",
-    "query-string": "^3.0.1",
+    "oauth-1.0a": "^2.1.1",
+    "query-string": "^4.3.4",
     "raven-js": "^3.7.0",
-    "react": "^15.3.0",
-    "react-native": "^0.33.0",
-    "react-native-autogrow-textinput": "^2.1.0",
-    "react-native-controllers": "^2.1.4",
+    "react": "16.0.0-alpha.6",
+    "react-native": "0.44.0",
+    "react-native-autogrow-textinput": "^3.0.2",
     "react-native-custom-action-sheet": "0.0.11",
-    "react-native-fetch-blob": "^0.9.4",
-    "react-native-hyperlink": "0.0.4",
-    "react-native-image-picker": "^0.19.4",
-    "react-native-navigation": "^1.0.30",
-    "react-native-router-redux": "github:joehoyle/react-native-router-redux#vienna",
-    "react-native-safari-view": "^1.0.0",
-    "react-native-vector-icons": "^2.0.3",
-    "react-redux": "^4.4.0",
+    "react-native-fetch-blob": "^0.10.5",
+    "react-native-hyperlink": "0.0.9",
+    "react-native-image-picker": "^0.26.3",
+    "react-native-safari-view": "^2.0.0",
+    "react-native-vector-icons": "^4.1.1",
+    "react-navigation": "^1.0.0-beta.9",
+    "react-redux": "^5.0.4",
+    "react-router-native": "^4.1.1",
     "redux": "^3.3.1",
-    "redux-logger": "^2.6.1",
+    "redux-logger": "^3.0.1",
     "redux-storage": "^4.0.1",
     "redux-storage-decorator-filter": "^1.1.5",
     "redux-storage-engine-reactnativeasyncstorage": "^1.0.1",
     "redux-thunk": "^2.0.1",
-    "superagent": "^2.0.0",
+    "superagent": "^3.5.2",
     "time-ago": "^0.1.0"
   },
   "devDependencies": {
-    "babel-jest": "^15.0.0",
+    "babel-jest": "^20.0.1",
     "babel-preset-react-native": "^1.9.0",
-    "jest": "^15.1.1",
-    "jest-react-native": "^15.0.0",
+    "jest": "^20.0.1",
+    "jest-react-native": "^18.0.0",
     "react-test-renderer": "^15.3.2"
   }
 }
