--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "redux-thunk": "^2.0.1",
     "superagent": "^3.5.2",
     "time-ago": "^0.1.0",
+    "urijs": "^1.18.10",
     "wordpress-rest-api-oauth-1": "^1.1.7"
   },
   "devDependencies": {
