--- a/package.json
+++ b/package.json
@@ -2,19 +2,24 @@
   "name": "Vienna",
   "version": "0.0.1",
   "private": true,
+  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "node node_modules/react-native/local-cli/cli.js start",
+    "start": "expo start",
+    "android": "expo start --android",
+    "ios": "expo start --ios",
+    "eject": "expo eject",
     "test": "jest"
   },
   "jest": {
     "preset": "jest-react-native"
   },
   "dependencies": {
+    "expo": "^32.0.0",
     "oauth-1.0a": "^2.1.1",
     "query-string": "^4.3.4",
     "raven-js": "^3.7.0",
-    "react": "16.0.0-alpha.12",
-    "react-native": "0.45.1",
+    "react": "16.5.0",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
     "react-native-autogrow-textinput": "^3.0.2",
     "react-native-custom-action-sheet": "0.0.11",
     "react-native-fetch-blob": "^0.10.5",
@@ -38,7 +43,7 @@
   },
   "devDependencies": {
     "babel-jest": "^20.0.1",
-    "babel-preset-react-native": "^1.9.0",
+    "babel-preset-expo": "^5.0.0",
     "jest": "^20.0.1",
     "jest-react-native": "^18.0.0",
     "react-test-renderer": "^15.3.2"
