--- a/app.json
+++ b/app.json
@@ -10,12 +10,7 @@
     ],
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
-    "splash": {
-      "image": "./assets/splash.png",
-      "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
-    },
+    "icon": "./images/app-icon-1024.png",
     "updates": {
       "fallbackToCacheTimeout": 0
     },
