--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "expo": "^32.0.0",
     "oauth-1.0a": "^2.1.1",
     "prop-types": "^15.7.2",
-    "query-string": "^4.3.4",
+    "query-string": "6.5",
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
     "react-native-autogrow-textinput": "^5.2.0",
