--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "react-native-autogrow-textinput": "^5.2.0",
     "react-native-custom-action-sheet": "0.0.11",
     "react-navigation": "^1.0.0-beta.9",
-    "react-redux": "^5.0.4",
+    "react-redux": "6",
     "react-router-native": "^4.1.1",
     "redux": "^3.3.1",
     "redux-storage": "^4.0.1",
