--- a/package.json
+++ b/package.json
@@ -25,11 +25,11 @@
     "react-navigation": "^1.0.0-beta.9",
     "react-redux": "6",
     "react-router-native": "^4.1.1",
-    "redux": "^3.3.1",
+    "redux": "4",
     "redux-storage": "^4.0.1",
     "redux-storage-decorator-filter": "^1.1.5",
     "redux-storage-engine-reactnativeasyncstorage": "^1.0.1",
-    "redux-thunk": "^2.0.1",
+    "redux-thunk": "^2.3.0",
     "superagent": "^3.5.2",
     "urijs": "^1.18.10",
     "wordpress-rest-api-oauth-1": "^1.1.7"
