--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "react-native-custom-action-sheet": "0.0.11",
     "react-navigation": "^1.0.0-beta.9",
     "react-redux": "6",
-    "react-router-native": "^4.1.1",
+    "react-router-native": "5",
     "redux": "4",
     "redux-storage": "^4.0.1",
     "redux-storage-decorator-filter": "^1.1.5",
