--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz",
     "react-native-autogrow-textinput": "^5.2.0",
     "react-native-custom-action-sheet": "0.0.11",
-    "react-navigation": "3",
+    "react-native-gesture-handler": "~1.3.0",
+    "react-navigation": "^4.0.10",
+    "react-navigation-stack": "^1.9.4",
     "react-redux": "6",
     "react-router-native": "5",
     "redux": "4",
