--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "expo": "^35.0.0",
+    "expo-web-browser": "~7.0.0",
     "oauth-1.0a": "^2.2.5",
     "prop-types": "^15.7.2",
     "query-string": "6.5",
