--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-native-autogrow-textinput": "^5.2.0",
     "react-native-custom-action-sheet": "0.0.11",
     "react-native-gesture-handler": "~1.5.0",
+    "react-native-webview": "7.4.3",
     "react-navigation": "^4.0.10",
     "react-navigation-stack": "^1.9.4",
     "react-redux": "6",
