--- a/package.json
+++ b/package.json
@@ -43,6 +43,17 @@
     "babel-preset-expo": "^7.0.0",
     "jest": "24",
     "jest-react-native": "^18.0.0",
-    "react-test-renderer": "16.5"
+    "react-test-renderer": "16.5",
+    "babel-eslint": "10.x",
+    "babel-loader": "8.0.6",
+    "eslint": "6.x",
+    "eslint-config-humanmade": "0.7.0",
+    "eslint-config-react-app": "5.0.0",
+    "eslint-plugin-flowtype": "3.x",
+    "eslint-plugin-import": "2.x",
+    "eslint-plugin-jsx-a11y": "6.x",
+    "eslint-plugin-prettier": "^3.1.0",
+    "eslint-plugin-react": "7.x",
+    "eslint-plugin-react-hooks": "1.x"
   }
 }
