--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "preset": "jest-react-native"
   },
   "dependencies": {
+    "@react-native-community/masked-view": "^0.1.5",
     "expo": "^36.0.0",
     "expo-web-browser": "~8.0.0",
     "oauth-1.0a": "^2.2.5",
@@ -24,9 +25,12 @@
     "react-native-autogrow-textinput": "^5.2.0",
     "react-native-custom-action-sheet": "0.0.11",
     "react-native-gesture-handler": "~1.5.0",
+    "react-native-reanimated": "~1.4.0",
+    "react-native-safe-area-context": "0.6.0",
+    "react-native-screens": "2.0.0-alpha.12",
     "react-native-webview": "7.4.3",
     "react-navigation": "^4.0.10",
-    "react-navigation-stack": "^1.9.4",
+    "react-navigation-stack": "^2.0.0-alpha.42",
     "react-redux": "6",
     "react-router-native": "5",
     "redux": "4",
@@ -39,13 +43,10 @@
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
-    "babel-jest": "24",
-    "babel-preset-expo": "^7.0.0",
-    "jest": "24",
-    "jest-react-native": "^18.0.0",
-    "react-test-renderer": "16.5",
     "babel-eslint": "10.x",
+    "babel-jest": "24",
     "babel-loader": "8.0.6",
+    "babel-preset-expo": "^7.0.0",
     "eslint": "6.x",
     "eslint-config-humanmade": "0.7.0",
     "eslint-config-react-app": "5.0.0",
@@ -54,6 +55,9 @@
     "eslint-plugin-jsx-a11y": "6.x",
     "eslint-plugin-prettier": "^3.1.0",
     "eslint-plugin-react": "7.x",
-    "eslint-plugin-react-hooks": "1.x"
+    "eslint-plugin-react-hooks": "1.x",
+    "jest": "24",
+    "jest-react-native": "^18.0.0",
+    "react-test-renderer": "16.5"
   }
 }
