--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.5",
     "expo": "^36.0.0",
+    "expo-localization": "~8.0.0",
     "expo-web-browser": "~8.0.0",
     "oauth-1.0a": "^2.2.5",
     "prop-types": "^15.7.2",
