Add splash image

--- a/app.json
+++ b/app.json
@@ -20,6 +20,10 @@
     ],
     "ios": {
       "supportsTablet": true
+    },
+    "splash": {
+      "image": "./images/splash.png",
+      "resizeMode": "contain"
     }
   }
 }
