--- a/.travis.yml
+++ b/.travis.yml
@@ -13,4 +13,5 @@ before_script:
     - yarn global add expo-cli
 script:
     - yarn install
+    - expo expo login --non-interactive -u joehoyle
     - expo build:ios
