Dynamically set build number

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,5 +12,7 @@ before_script:
 script:
     - yarn install
     - expo login --non-interactive -u joehoyle
+    - export COMMIT=$(git rev-parse HEAD | cut -c1-7)
+    - sed -E 's/(buildNumber": ")([^"]+)/\1'$COMMIT'/' app.json
     - expo build:ios --apple-id joehoyle@gmail.com
     - expo upload:ios --apple-id joehoyle@gmail.com --latest
