--- a/.travis.yml
+++ b/.travis.yml
@@ -11,12 +11,12 @@ before_script:
     - yarn global add expo-cli
 script:
     - yarn install
-    - expo login --non-interactive -u joehoyle
+    - expo login --non-interactive -u $EXPO_USERNAME
     - export branch=${1:-'master'}
     - export buildNumber=$(expr $(git rev-list $branch --count) - $(git rev-list HEAD..$branch --count))
     - echo "Updating build number to $buildNumber using branch '$branch'."
     - >
       sed -E 's/(buildNumber": ")([^"]+)/\1'$buildNumber'/' app.json > tmp
     - mv tmp app.json
-    - expo build:ios --apple-id joehoyle@gmail.com
-    - expo upload:ios --apple-id joehoyle@gmail.com --latest
+    - expo build:ios --apple-id $EXPO_APPLE_ID
+    - expo upload:ios --latest
