--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ before_script:
 script:
     - yarn install
     - expo login --non-interactive -u $EXPO_USERNAME
+    - git fetch -a
     - export branch=${1:-'origin/master'}
     - export buildNumber=$(expr $(git rev-list $branch --count) - $(git rev-list HEAD..$branch --count))
     - echo "Updating build number to $buildNumber using branch '$branch'."
