Add usesNonExemptEncryption to avoid manual steps on publishing builds

--- a/app.json
+++ b/app.json
@@ -19,7 +19,10 @@
       "**/*"
     ],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "config": {
+        "usesNonExemptEncryption": false
+      }
     },
     "splash": {
       "image": "./images/splash.png",
