--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "@react-navigation/native": "^5.0.0-alpha.21",
     "@react-navigation/stack": "^5.0.0-alpha.46",
     "expo": "^36.0.0",
+    "expo-file-system": "~8.0.0",
     "expo-localization": "~8.0.0",
+    "expo-sharing": "~8.0.0",
     "expo-web-browser": "~8.0.0",
     "oauth-1.0a": "^2.2.5",
     "prop-types": "^15.7.2",
@@ -28,6 +30,7 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.1.tar.gz",
     "react-native-autogrow-textinput": "^5.2.0",
     "react-native-gesture-handler": "~1.5.0",
+    "react-native-image-view": "^2.1.8",
     "react-native-reanimated": "~1.4.0",
     "react-native-safe-area-context": "0.6.0",
     "react-native-screens": "2.0.0-alpha.12",
