--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "@react-navigation/stack": "^5.0.0-alpha.46",
     "expo": "^36.0.0",
     "expo-file-system": "~8.0.0",
+    "expo-image-picker": "~8.0.1",
     "expo-localization": "~8.0.0",
+    "expo-permissions": "~8.0.0",
     "expo-sharing": "~8.0.0",
     "expo-web-browser": "~8.0.0",
     "oauth-1.0a": "^2.2.5",
