--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-navigation/native": "^5.0.0-alpha.21",
     "@react-navigation/stack": "^5.0.0-alpha.46",
     "expo": "^36.0.0",
+    "expo-document-picker": "~8.0.0",
     "expo-file-system": "~8.0.0",
     "expo-image-picker": "~8.0.1",
     "expo-localization": "~8.0.0",
