--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "private": true,
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
+    "start": "npm run get-icons; expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "eject": "expo eject",
-    "test": "jest"
+    "test": "jest",
+    "get-icons": "test -f images/SFSymbolsFallback.ttf || bash ./get-sf-symbols.sh"
   },
   "jest": {
     "preset": "jest-react-native"
