--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@react-native-community/datetimepicker": "2.1.0",
     "@react-native-community/masked-view": "^0.1.5",
+    "@react-native-community/segmented-control": "^1.0.2",
     "@react-navigation/native": "^5.0.0-alpha.21",
     "@react-navigation/stack": "^5.0.0-alpha.46",
     "expo": "^36.0.0",
